--- a/.github/workflows/extraction.yml
+++ b/.github/workflows/extraction.yml
@@ -1,7 +1,7 @@
 name: Download the Latest Data from DISCOSweb
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 5"
   workflow_dispatch:
 
 jobs:
