--- a/src/FigureGeneration/FigureGeneration.csproj
+++ b/src/FigureGeneration/FigureGeneration.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-      <PackageReference Include="DiscosWebSdk" Version="1.8.3" />
+      <PackageReference Include="DiscosWebSdk" Version="1.8.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
@@ -19,6 +19,10 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
         <PackageReference Include="PgfPlots.Net" Version="0.1.3" />
+        <PackageReference Include="Serilog" Version="2.12.0" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
         <PackageReference Include="SpaceTrackSdk" Version="1.1.0" />
     </ItemGroup>
     
