--- a/src/FigureGeneration/appsettings.json
+++ b/src/FigureGeneration/appsettings.json
@@ -1,10 +1,11 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
+    "Serilog": {
+        "MinimumLevel": "Information",
+        "WriteTo": [
+            {
+                "Name": "Console"
+            }
+        ]
     },
     "AppSettings": {
         "DataRoot": "../../../../../data"
